--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,68 +1,25 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
+name: code-coverage
+on: [push]
 jobs:
   build:
-    runs-on: windows-latest
-
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install Salesforce CLI
-      run: |
-        Invoke-WebRequest -Uri https://developer.salesforce.com/media/salesforce-cli/sfdx-cli/channels/stable/sfdx-cli-7.117.0-afc4313-windows-x64.tar.xz -OutFile sfdx-cli.tar.xz
-        tar -xvf sfdx-cli.tar.xz
-        ./sfdx-cli/install.cmd
-        echo "C:\Program Files\Salesforce CLI\bin" | Out-File -FilePath $Env:GITHUB_ENV -Append
-      shell: pwsh
-
-    - name: Verify Salesforce CLI installation
-      run: sfdx --version
-      shell: pwsh
-
-    - name: Authenticate to Salesforce
-      run: sfdx force:auth:sfdxurl:store -f ./auth/sfdx-auth-url.txt -a MyOrg
-      env:
-        SFDX_AUTH_URL: ${{ secrets.SFDX_AUTH_URL }}
-      shell: pwsh
-
-    - name: Convert source to MDAPI format
-      run: sfdx force:source:convert -d mdapi_output -r force-app
-      shell: pwsh
-
+    - uses: actions/checkout@v1
+    - name: Install Dependencies
+      run: npm install sfdx-cli
+    - name: Populate auth file
+      run: 'echo "${{ secrets.SALESFORCE_AUTH_URL }}" > ./SALESFORCE_AUTH_URL.txt'
+    - name: Authenticate Dev Hub
+      run: 'node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f ./SALESFORCE_AUTH_URL.txt -a devhub -d'
+    - name: Create Scratch Org
+      run: node_modules/sfdx-cli/bin/run force:org:create --targetdevhubusername devhub --setdefaultusername --definitionfile config/project-scratch-def.json --setalias ciorg --durationdays 1
+    - name: Deploy source
+      run: node_modules/sfdx-cli/bin/run force:source:push
     - name: Run Apex tests
-      run: sfdx force:apex:test:run -u MyOrg --resultformat human --codecoverage --outputdir test-results --loglevel error
-      shell: pwsh
-
-    - name: Upload test results to GitHub
-      uses: actions/upload-artifact@v2
-      with:
-        name: test-results
-        path: test-results
-
-    - name: Upload coverage to Codecov
+      run: node_modules/sfdx-cli/bin/run force:apex:test:run --codecoverage --resultformat human -d ./
+    - name: Upload code coverage for Apex to Codecov.io
       uses: codecov/codecov-action@v2
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: test-results/coverage/cov.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: true
-
-    - name: Deploy to Salesforce
-      if: github.ref == 'refs/heads/main'
-      run: sfdx force:mdapi:deploy -d mdapi_output -u MyOrg -w -1
-      shell: pwsh
+        flags: Apex
+    - name: Delete Scratch Org
+      run: node_modules/sfdx-cli/bin/run force:org:delete --noprompt
