--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,12 @@ jobs:
     - name: Authenticate Dev Hub
       run: 'node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f ./SALESFORCE_AUTH_URL.txt -a devhub -d'
     - name: Create Scratch Org
-      run: node_modules/sfdx-cli/bin/run force:org:create --targetdevhubusername devhub --setdefaultusername --definitionfile config/project-scratch-def.json --setalias ciorg --durationdays 1
+      run: sfdx force:org:create -f config/project-scratch-def.json -a ciorg -s -d 1 -v MyOrg
+      shell: pwsh
+
+    - name: Push Source to Scratch Org
+      run: sfdx force:source:push -u ciorg
+      shell: pwsh
     - name: Deploy source
       run: node_modules/sfdx-cli/bin/run force:source:push
     - name: Run Apex tests
