--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,8 @@ jobs:
       run: 'echo "${{ secrets.SALESFORCE_AUTH_URL }}" > ./SALESFORCE_AUTH_URL.txt'
     - name: Authenticate Dev Hub
       run: 'node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f ./SALESFORCE_AUTH_URL.txt -a devhub -d'
-    - name: Create Scratch Org
-      run: sfdx force:org:create -f config/project-scratch-def.json -a ciorg -s -d 1 -v MyOrg
-      shell: pwsh
-
-    - name: Push Source to Scratch Org
-      run: sfdx force:source:push -u ciorg
-      shell: pwsh
+    - name: 'Create Scratch Org'
+      run: sfdx force:org:create -f config/project-scratch-def.json -a scratch-org -s -d 1
     - name: Deploy source
       run: node_modules/sfdx-cli/bin/run force:source:push
     - name: Run Apex tests
