--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -11,8 +11,9 @@ jobs:
       run: 'echo "${{ secrets.SALESFORCE_AUTH_URL }}" > ./SALESFORCE_AUTH_URL.txt'
     - name: Authenticate Dev Hub
       run: 'node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f ./SALESFORCE_AUTH_URL.txt -a devhub -d'
-    - name: Create Scratch Org
-      run: node_modules/sfdx-cli/bin/run force:org:create --targetdevhubusername devhub --setdefaultusername --definitionfile config/project-scratch-def.json --setalias ciorg --durationdays 1
+    - name: 'Create Scratch Org'
+      run: sfdx org:create:scratch -f config/project-scratch-def.json -a ciorg -s -d 1 -v MyOrg
+      shell: pwsh
     - name: Deploy source
       run: node_modules/sfdx-cli/bin/run force:source:push
     - name: Run Apex tests
